Fixed project's responsive spacing.

--- a/client/src/containers/Projects/Project/Project.css
+++ b/client/src/containers/Projects/Project/Project.css
@@ -1,10 +1,13 @@
 .Project {
-  width: 320px;
+  width: 31%;
+  min-width: 250px;
+  /* max-width: 450px; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* justify-content: space-between;  ???? */
   box-sizing: border-box;
-  margin: 25px;
+  margin-bottom: 40px;
   /* padding: 10px; */
   color: black;
   background-color: rgb(255, 255, 255); 
@@ -35,8 +38,18 @@
 }
 
 
-@media (max-height: 400px) {
-  .ProjectsList {
-    
+@media (max-width: 1060px) {
+  .Project {
+    width: 48%;
+    min-width: 300px;
+    /* max-width: 450px; */
+  }
+}
+
+@media (max-width: 699px) {
+  .Project {
+    width: 100%;
+    min-width: 320px;
+    /* max-width: 450px; */
   }
 }
