--- a/client/src/containers/Projects/Projects.css
+++ b/client/src/containers/Projects/Projects.css
@@ -1,31 +1,46 @@
 .ProjectSection {
-  padding-top: 40px;
   background-color: #0088ff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
   box-sizing: initial;
   min-height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
   /* background-color: #005ba9; */
 }
 
 .SectionTitle {
-  display: flex;
-  justify-content: center;
   font-size: 2.5em;
   font-weight: 500;
   color: White;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 75px;
+  margin-bottom: 60px;
   text-shadow: 0px 0px 5px rgba(68, 68, 68, 0.4);
 }
 
 .ProjectsList {
-  padding-right: 80px;
-  padding-left: 80px;
-  padding-bottom: 80px;
+  max-width: 1500px;
+  /* background-color: black;  */
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
+  /* align-items: flex-end; */
   flex-wrap: wrap;
-  height: 100%;
-  
+}
+
+@media (min-width: 900px) {
+  .ProjectSection {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media (max-width: 699px) {
+  .ProjectsList {
+    flex-direction: column;
+  }
 }
